# routes/index.js
@@ -1,12 +1,19 @@
 const router = require('express').Router();
+const passport = require('passport');
 
-router.get('/', (req, res) =>{
-    // #swagger.tags = ['Home']
-    res.send('Hi there!')
+router.use('/', require('./swagger'))
+router.use('/products', require('./products'));
+router.use('/users', require('./users'));
+
+router.get('/login', passport.authenticate('github', { scope: ['user:email'] }));
+
+router.use('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err);}
+        res.redirect('/');
+    });
 });
 
-router.use('/products', require('./products'));
 
-router.use('/users', require('./users'));
 
 module.exports = router;
